# wgpu-msbfs

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
benchmarks/: CMakeLists.txt  bench.cpp
data/shaders/: frontier-expansion.wgsl  frontier-identification.wgsl  msbfs-uber.wgsl
scripts/: generate-tests.py  reverse-csr.cpp
src/: CMakeLists.txt  msbfs.cpp  wgpu-state.cpp
src/core/kernels/: frontier-expansion.cpp  frontier-identification.cpp  uber-kernel.cpp
src/core/kernels/bindgroups/: bsa.cpp  csr.cpp  iterative-length.cpp  jfq.cpp  uber.cpp
src/core/util/: file-loader.cpp  shader-locator.cpp  wgpu-utils.cpp
src/cuda/: msbfs.cu
src/include/: msbfs.hpp  wgpu-state.hpp
src/include/core/kernels/: frontier-expansion.hpp  frontier-identification.hpp  length-kernel.hpp  uber-kernel.hpp
src/include/core/kernels/bindgroups/: bsa.hpp  csr.hpp  iterative-length.hpp  jfq.hpp  uber.hpp
src/include/core/util/: file-loader.hpp  shader-locator.hpp  wgpu-utils.hpp
src/include/wgpu/: wgpu-state.hpp
src/wgpu/: msbfs.cpp  wgpu-state.cpp
tests/: CMakeLists.txt  test.cpp
